# volumecarvao

./: .gitignore  .pylintrc  README.md  RELATORIOJUNHO  ResumoRelatorioJunho.odt  dbTest.py  embed.py  extconverter  main.py  main3.py  mainh.py  mainmain.py  maintest5.py  pcselector  pcselector.py  requirements.txt  selected.txt  test01.py  testeteste.py  unir.ipynb  unirgeral.py  volumetotal.py
.ipynb_checkpoints/: unir-checkpoint.ipynb
.selecao_teste/: points_fig_0.txt  points_fig_1.txt  points_fig_10.txt  points_fig_100.txt  points_fig_101.txt  points_fig_102.txt  points_fig_103.txt  points_fig_104.txt  points_fig_105.txt  points_fig_106.txt  points_fig_107.txt  points_fig_108.txt  points_fig_109.txt  points_fig_11.txt  points_fig_110.txt  points_fig_111.txt  points_fig_112.txt  points_fig_113.txt  points_fig_114.txt  points_fig_115.txt  points_fig_116.txt  points_fig_117.txt  points_fig_118.txt  points_fig_119.txt  points_fig_12.txt  points_fig_120.txt  points_fig_121.txt  points_fig_122.txt  points_fig_123.txt  points_fig_124.txt  points_fig_125.txt  points_fig_126.txt  points_fig_127.txt  points_fig_128.txt  points_fig_129.txt  points_fig_13.txt  points_fig_130.txt  points_fig_131.txt  points_fig_132.txt  points_fig_133.txt  (+689 more)
pptk/: CMakeLists.txt  CMakeListsLin.txt  CMakeListsWin.txt  setup.py
pptk/pptk/build-viewer-Desktop-Debug/: Makefile  moc_viewer.cpp
pptk/pptk/viewer/: CMakeLists.txt  main.cpp  mypy.py  viewer.h  viewer.py  z.py
selecao_teste/: points_fig_0.txt  points_fig_1.txt  points_fig_10.txt  points_fig_11.txt  points_fig_12.txt  points_fig_13.txt  points_fig_14.txt  points_fig_15.txt  points_fig_16.txt  points_fig_17.txt  points_fig_18.txt  points_fig_19.txt  points_fig_2.txt  points_fig_20.txt  points_fig_21.txt  points_fig_22.txt  points_fig_23.txt  points_fig_24.txt  points_fig_25.txt  points_fig_26.txt  points_fig_27.txt  points_fig_28.txt  points_fig_29.txt  points_fig_3.txt  points_fig_30.txt  points_fig_31.txt  points_fig_32.txt  points_fig_33.txt  points_fig_34.txt  points_fig_35.txt  points_fig_36.txt  points_fig_37.txt  points_fig_38.txt  points_fig_39.txt  points_fig_4.txt  points_fig_40.txt  points_fig_41.txt  points_fig_42.txt  points_fig_43.txt  points_fig_44.txt  (+59 more)
